2014-01-12  JJ Allaire <jj@rstudio.org>

        * DESCRIPTION: bump version to 0.10.2.2
        * NAMESPACE: add registerPlugin function
        * R/Attributes.R: add registerPlugin function; add plugins parameter
        to cppFunction
        * man/cppFunction.Rd: documentation updates
        * man/pluginsAttribute.Rd: documentation updates
        * man/registerPlugin: documentation updates

2014-01-11  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: initial support for Rcpp::plugins attribute; add
        built-in cpp11 plugin
        * src/attributes.cpp: initial support for Rcpp::plugins attribute

2014-01-04  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: null check on pkginfo depends field

2013-01-02  Dirk Eddelbuettel  <edd@debian.org>

	* src/Timer.cpp (Rcpp): Applied refinement of previously applied
	patch re *BSD builds, see http://bugs.debian.org/697032 for more

2012-12-30  Dirk Eddelbuettel  <edd@debian.org>

	* src/Timer.cpp (Rcpp): Added defined() tests for more *BSD family
	members as the build also failed with the FreeBSD Kernel on Debian

2012-12-27  Dirk Eddelbuettel  <edd@debian.org>

	* src/Timer.cpp (Rcpp): Applied patch kindly supplied by Rainer
	Hurling to support compilation on FreeBSD

2012-12-26  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: return invisibly from void functions
        * src/attributes.cpp: return invisibly from void functions

2012-12-20 Romain Francois <romain@r-enthusiasts.com>

        * NAMESPACE : remove C++ObjectS3 and C++ClassRepresentation classes
        * R/00_classes.R: remove unused S4 classes

2012-12-21  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.10.2
        * inst/NEWS.Rd: Release 0.10.2
        * inst/include/Rcpp/config.h: Release 0.10.2
        * debian/*: Similarly updated for new release to Debian

	* inst/doc/unitTests/Rcpp-unitTests.R: added one more variable so
	that unitTest vignette can be built against new sourceCpp based files
